# DjangoProjectTest1

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_apps_url.py
core/templates/: base.html  home.html
finance/: forms.py  models.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_transaction_name.py  0003_alter_transaction_options.py
finance/templates/: category_info.html  create_transaction.html  finance.html  transaction_change.html  transaction_delete.html  transaction_info.html
grade/: models.py  urls.py  views.py
keys/: admin.py  crypto.py  forms.py  models.py  urls.py  views.py
keys/migrations/: 0001_initial.py
keys/templates/: key_create.html  key_info.html  keys_list.html
projecttest1/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/: forms.py  models.py  urls.py  views.py
task_manager/decorators/: logging.py
task_manager/migrations/: 0001_initial.py
task_manager/templates/: detail.html  index.html  task_create.html
