[tool.poetry]
name = "djangoprojecttest1"
version = "0.1.0"
description = ""
authors = ["hom9ki <156588482+hom9ki97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
